erDiagram
    workflow_instances ||--o{ episodes : owns
    workflow_attempts o|--o{ episodes : may_link
    episodes ||--o{ episode_events : has
    episodes ||--o{ episode_summaries : has
    episodes ||--o{ episode_failures : has
    episodes ||--o{ episode_artifacts : has
    workspaces ||--o{ memory_items : owns
    episodes o|--o{ memory_items : may_link
    memory_items ||--o{ memory_embeddings : has
    memory_items ||--o{ memory_relations : source
    memory_items ||--o{ memory_relations : target
    workspaces ||--o{ memory_summaries : owns
    episodes o|--o{ memory_summaries : may_link
    memory_summaries ||--o{ memory_summary_memberships : has
    memory_items ||--o{ memory_summary_memberships : member
